--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,10 +11,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm instal
+        run: |
+          cd alpacked-test-assignment-master
+          npm instal
 
       - name: Build project
-        run: npm build
+        run: |
+          cd alpacked-test-assignment-master
+          npm build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
