Fix mistake in npm command

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd alpacked-test-assignment-master
-          npm instal
+          npm install
 
       - name: Build project
         run: |
