Fix command in Build project step

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,12 +13,12 @@ jobs:
       - name: Install dependencies
         run: |
           cd alpacked-test-assignment-master
-          npm instal
+          npm install
 
       - name: Build project
         run: |
           cd alpacked-test-assignment-master
-          npm build
+          npm run build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
