Change branch to main in ci/cd script

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,7 @@
 name: Build and deploy static files to AWS S3 bucket
 on:
   push:
-    branches: [ develop ]
+    branches: [ main ]
   workflow_dispatch:
 jobs:
   build:
